k8s/infra/auth/lldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: lldap
      labels:
        app: lldap
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: proxmox
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: lldap
          image: ghcr.io/lldap/lldap:2024-09-02-debian-rootless # renovate: docker=ghcr.io/lldap/lldap versioning=loose
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          ports:
            - name: ldap
              containerPort: 3890
            - name: ldaps
              containerPort: 6360
            - name: web
              containerPort: 17170
          volumeMounts:
            - name: lldap-data
              mountPath: /data
      volumes:
        - name: lldap-data
          emptyDir: { }
