k8s/infra/auth/lldap/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: lldap
spec:
  type: LoadBalancer
  selector:
    app: lldap
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: ldap
      port: 389
      targetPort: ldap
