k8s/infra/auth/lldap/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap
  namespace: lldap
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "lldap.emisia.net"
  rules:
    - backendRefs:
        - name: lldap
          port: 80
