k8s/infra/auth/lldap/local-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: local-route
  namespace: lldap
spec:
  parentRefs:
    - name: insecure
      namespace: gateway
  hostnames:
    - "lldap.local"
  rules:
    - backendRefs:
        - name: lldap
          port: 80
